name:                day4
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/sea-sparks/day4#readme
license:             BSD3
license-file:        LICENSE
author:              Cassandra Sparks
maintainer:          cass.a.sparks@gmail.com
copyright:           n/a (for now)
category:            fun
build-type:          Simple
cabal-version:       >=1.10

executable day4
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , transformers
                     , containers
                     , cryptohash
                     , bytestring
                     , hex
  other-modules:       DayFour
